--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/Assets/css/components.css">
     <link rel="stylesheet" href="/Assets/bundles/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="/Assets/bundles/flag-icon-css/css/flag-icon.min.css">
+    <link rel="stylesheet" href="/Plugins/ReactToastify.css">
+    <link rel="stylesheet" href="/Styles/All.css">
     <!--StyleSheet-->
 
 </head>
@@ -29,6 +31,7 @@
     <script src="/Assets/js/page/index.js"></script>
     <script src="/Assets/js/scripts.js"></script>
     <script src="/Assets/bundles/jquery.sparkline.min.js"></script>
+    <script src="/Plugins/sweetalert.min.js"></script>
     <script>
         // window.jQuery
         // (
